# dfir-orc

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .vsconfig  AUTHORS.txt  Build-Orc.ps1  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  SECURITY.md  ToolVersion.h  VERSION.txt  azure-pipelines-template.yml  azure-pipelines.yml  publiccode.yml  release-notes.md  vcpkg.json
src/: CMakeLists.txt
src/FastFind/: CMakeLists.txt  FastFind.cpp  FastFind.rc  FastFindEmbed.xml  FastFindSample.xml  FastFindSample.yara  Icon.h.in  Launcher.txt  resource.h  stdafx.cpp  stdafx.h  targetver.h
src/Orc/: CMakeLists.txt  Icon.h.in  Mothership.h  Mothership_Config.cpp  Mothership_Output.cpp  Mothership_Run.cpp  Orc.cpp  Orc.rc  XPSP2Compatibility.cpp  resource.h  stdafx.cpp  stdafx.h  targetver.h  xpcrtwrap.asm
src/OrcApacheOrc/: CMakeLists.txt  OrcApacheOrc.cpp  OrcApacheOrcLib.cpp  stdafx.h
src/OrcApacheOrcLib/: ApacheOrcMemoryPool.cpp  ApacheOrcMemoryPool.h  ApacheOrcStream.cpp  ApacheOrcStream.h  ApacheOrcWriter.cpp  ApacheOrcWriter.h  CMakeLists.txt  stdafx.cpp  stdafx.h
src/OrcCapsule/: CMakeLists.txt  Compatibility.manifest  OrcCapsule.cmake  OrcCapsule.cpp  OrcCapsule.rc  OrcCapsuleCli.cpp  OrcCapsuleCli.h  ResourceHandler.h  Version.h.in  resource.h  vcpkg.json
src/OrcCapsule/Cmd/: Architecture.cpp  Architecture.h  CmdResource.cpp  CmdResource.h
src/OrcCapsule/Fmt/: std_filesystem.h
src/OrcCapsule/Utilities/: Compression.cpp  Compression.h  Crypto.cpp  Crypto.h  Error.h  File.cpp  File.h  Format.cpp  Format.h  Log.cpp  Log.h  Process.cpp  Process.h  Resource.cpp  Resource.h  Scope.h  Strings.cpp  Strings.h
src/OrcCommand/: CMakeLists.txt  ConfigFile_DD.cpp  ConfigFile_DD.h  ConfigFile_EmptyTool.cpp  ConfigFile_EmptyTool.h  ConfigFile_ExtractData.cpp  ConfigFile_ExtractData.h  ConfigFile_FastFind.cpp  ConfigFile_FastFind.h  ConfigFile_FatInfo.cpp  ConfigFile_FatInfo.h  ConfigFile_GetComObjects.cpp  ConfigFile_GetComObjects.h  ConfigFile_GetSamples.cpp  ConfigFile_GetSamples.h  ConfigFile_GetThis.cpp  ConfigFile_GetThis.h  ConfigFile_ImportData.cpp  ConfigFile_ImportData.h  ConfigFile_NTFSInfo.cpp  ConfigFile_NTFSInfo.h  ConfigFile_OrcConfig.cpp  ConfigFile_OrcConfig.h  ConfigFile_RegInfo.cpp  ConfigFile_RegInfo.h  ConfigFile_ToolEmbed.cpp  ConfigFile_ToolEmbed.h  ConfigFile_USNInfo.cpp  ConfigFile_USNInfo.h  ConfigFile_WOLFLauncher.cpp  ConfigFile_WOLFLauncher.h  Console.h  DD.h  DDSqlSchema.xml  DD_Config.cpp  DD_Output.cpp  DD_Run.cpp  EmptyTool.h  EmptyToolSqlSchema.xml  EmptyTool_Config.cpp  (+105 more)
src/OrcCommand/Configuration/: ShadowsParserOption.cpp  ShadowsParserOption.h
src/OrcCommand/Log/: UtilitiesLogger.cpp  UtilitiesLogger.h  UtilitiesLoggerConfiguration.cpp  UtilitiesLoggerConfiguration.h
src/OrcLib/: AccumulatingStream.cpp  AccumulatingStream.h  ApacheOrcOutputWriter.h  Archive.cpp  Archive.h  ArchiveAgent.cpp  ArchiveAgent.h  ArchiveCreate.cpp  ArchiveCreate.h  ArchiveExtract.cpp  ArchiveExtract.h  ArchiveExtractCallback.cpp  ArchiveExtractCallback.h  ArchiveFormat.cpp  ArchiveFormat.h  ArchiveMessage.cpp  ArchiveMessage.h  ArchiveNotification.cpp  ArchiveNotification.h  ArchiveOpenCallback.cpp  ArchiveOpenCallback.h  ArchiveUpdateCallback.cpp  ArchiveUpdateCallback.h  AttributeList.cpp  AttributeList.h  Authenticode.cpp  Authenticode.h  AutoRuns.cpp  AutoRuns.h  BITSAgent.cpp  BITSAgent.h  BITSDownloadTask.cpp  BITSDownloadTask.h  BinaryBuffer.cpp  BinaryBuffer.h  BitLocker.h  BoundTableRecord.cpp  BoundTableRecord.h  BoundedBuffer.h  Buffer.h  (+428 more)
src/OrcLib/Archive/: Appender.h  CompressionLevel.cpp  CompressionLevel.h  IArchive.h  Item.cpp  Item.h
src/OrcLib/Configuration/: ConfigFile.cpp  ConfigFile.h  ConfigFileReader.cpp  ConfigFileReader.h  ConfigFileWriter.cpp  ConfigFileWriter.h  ConfigFile_Common.cpp  ConfigFile_Common.h  ConfigItem.cpp  ConfigItem.h  Option.cpp  Option.h
src/OrcLib/FileFormat/: PeParser.cpp  PeParser.h  PeVersionInfo.cpp  PeVersionInfo.h
src/OrcLib/Filesystem/: FileAttribute.cpp  FileAttribute.h
src/OrcOptRowColumn/: CMakeLists.txt  OrcOptRowColumn.cpp  dllmain.cpp
src/OrcOptRowColumnLib/: CMakeLists.txt  OptRowColumnMemoryPool.cpp  OptRowColumnMemoryPool.h  OptRowColumnStream.cpp  OptRowColumnStream.h  OptRowColumnWriter.cpp  OptRowColumnWriter.h
src/OrcParquet/: CMakeLists.txt  OrcParquet.cpp  OrcParquet.h  dllmain.cpp  stdafx.h
src/OrcParquetLib/: CMakeLists.txt  ParquetDefinitions.h  ParquetStream.cpp  ParquetStream.h  ParquetWriter.cpp  ParquetWriter.h  stdafx.h
src/OrcSql/: CMakeLists.txt  OrcSql.cpp  OrcSql.h  SqlConnection.cpp  SqlConnection.h  SqlWriter.cpp  SqlWriter.h  stdafx.h
tests/: CMakeLists.txt  New-WofTestDataset.ps1
tests/OrcApacheOrcTest/: CMakeLists.txt  OrcApacheOrcTest.cpp  OrcApacheOrcTest.rc  orc_output.cpp  resource.h  stdafx.cpp  stdafx.h  targetver.h
tests/OrcLibTest/: CMakeLists.txt  Chakra.playlist  Disk.playlist  DiskExtentTest.cpp  DiskExtentTest.h  FAT.playlist  NTFS.playlist  OrcLibTest.cpp  OrcLibTest.rc  RunningCode.playlist  Streams.playlist  Utilities.playlist  VolumeReaderTest.cpp  VolumeReaderTest.h  authenticode_test.cpp  binary_buffer_test.cpp  buffer.cpp  bufferstream.cpp  chakra_basic.cpp  convert.cpp  crypto_utilities_test.cpp  disk_extent_test.cpp  embedded_resource.cpp  exceptions.cpp  fat_file_entry_test.cpp  fat_stream_test.cpp  fat_table_test.cpp  fat_walker_test.cpp  fuzzy_hash_stream.cpp  hash_stream_test.cpp  libraries_test.cpp  locations.cpp  logwriter.cpp  mft_reccord_test.cpp  mft_walker_test.cpp  parameter_check.cpp  partition_table_test.cpp  partition_test.cpp  profile_list.cpp  registry.cpp  (+17 more)
tests/OrcOptRowColumnTest/: CMakeLists.txt  OrcOptRowColumnTest.cpp  OrcOptRowColumnTest.rc  orc_output.cpp  resource.h
tests/OrcParquetTest/: OrcParquetTest.cpp  OrcParquetTest.rc  parquet_output.cpp  parquet_writer.cpp  resource.h  stdafx.cpp  stdafx.h
tests/OrcSqlTest/: CMakeLists.txt  OrcSqlTest.rc  resource.h  sql_output.cpp  stdafx.cpp  stdafx.h
tests/tools/: job.ps1
tools/rcedit/: .clang-format  CMakeLists.txt
(+507 files in other folders)
